Added delete function for badges
